# org-mode-tauri

./: .eslintrc.yml  .prettierrc  README.md  package.json  pnpm-lock.yaml
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file_reader.rs  main.rs  org.rs
src-tauri/src/api/: mod.rs  org_api.rs
src/lib/: Agenda.svelte  AllNodesView.svelte  DayView.svelte  Greet.svelte  Node.svelte  SingleFile.svelte  types.ts  utils.ts
