[package]
name = "org-mode-tauri"
version = "0.0.0"
description = "A Tauri App that reads org files and provides todo actions"
authors = ["jobnbackpack"]
license = "MIT"
repository = "https://github.com/jobnbackpack/org-mode-tauri"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
orgize = "0.8.4"

# need this for getting a 3 year old PR that is still not merged ^^ this makes repeating available
[patch.crates-io]
orgize = { git = 'https://github.com/calmofthestorm/orgize.git', branch = "timestamp_parsing"}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
